compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__expressions_parser_tests__multiplication_ast_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: Plus,
    left: LiteralInteger {
        value: 1,
    },
    right: BinaryExpression {
        operator: Multiplication,
        left: LiteralInteger {
            value: 2,
        },
        right: LiteralInteger {
            value: 3,
        },
    },
}
