compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__expressions_parser_tests__parenthesis_expressions_should_change_the_ast.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
ParenExpression {
    expression: BinaryExpression {
        operator: Plus,
        left: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "x",
                },
            ),
            base: None,
        },
        right: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "y",
                },
            ),
            base: None,
        },
    },
}
