compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__expressions_parser_tests__range_expression.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statements
---
[
    RangeStatement {
        start: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "a",
                },
            ),
            base: None,
        },
        end: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "b",
                },
            ),
            base: None,
        },
    },
    RangeStatement {
        start: LiteralInteger {
            value: 1,
        },
        end: LiteralInteger {
            value: 2,
        },
    },
    RangeStatement {
        start: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "a",
                },
            ),
            base: None,
        },
        end: LiteralInteger {
            value: 2,
        },
    },
    RangeStatement {
        start: LiteralInteger {
            value: 2,
        },
        end: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "a",
                },
            ),
            base: None,
        },
    },
    RangeStatement {
        start: LiteralInteger {
            value: -2,
        },
        end: LiteralInteger {
            value: -1,
        },
    },
]
