compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__expressions_parser_tests__signed_literal_expression_reversed_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: Plus,
    left: LiteralInteger {
        value: -4,
    },
    right: LiteralInteger {
        value: 5,
    },
}
